<resources>
    <string name="app_name">Inventory</string>
    <string name="no_product">No product available</string>
    <string name="quantity_available">Quantity available: </string>
    <string name="price">Price: $</string>
    <string name="sale">SALE</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_order">Order</string>
    <string name="add_new">Add a new product</string>
    <string name="add_product">Add a product</string>
    <string name="update_product">Update a product</string>
    <string name="delete_successful">Product successfully deleted</string>
    <string name="delete_failed">The product was not deleted</string>
    <string name="action_add_supplier">Add a supplier</string>
    <string name="product_name">Product name</string>
    <string name="supplier_email">Supplier\'s email address</string>
    <string name="supplier_name">Supplier\'s name</string>
    <string name="edit_supplier">Edit supplier</string>
    <string name="supplier_saved">Supplier successfully saved</string>
    <string name="error_saving">The supplier was not saved</string>
    <string name="product_updated">Product successfully updated</string>
    <string name="error_updating">The product was not updated</string>
    <string name="error_loading">Error loading the picture</string>
    <string name="product_saved">Product saved with Uri: </string>
    <string name="browse">Browse picture</string>
    <string name="unsaved_changes_message">You have unsaved changes. Are you sure you want to quit?</string>
    <string name="quit">Quit</string>
    <string name="cancel">Cancel</string>
    <string name="delete_message">Are you sure you want to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="incorrect_entries">One or many entries are incorrect. Please make sure all the fields are filled and correct.</string>
    <string name="invalid_number">Please enter a valid number</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="incorrect_amount">Please enter a correct amount</string>
    <string name="file_not_found">File not found</string>
    <string name="product_preview">Product preview</string>
    <string name="price_hint">0.00</string>
    <string name="quantity_hint">0</string>
    <string name="change_quantity_hint">Qty</string>
    <string name="supplier_hint">My supplier</string>
    <string name="contact_hint">supplier@contact.com</string>

</resources>
