<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/product_name_field"
            style="@style/productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:hint="@string/product_name"
            android:inputType="text"/>

        <ImageView
            android:id="@+id/picture_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/picture_dimen"
            android:contentDescription="@string/product_preview"
            android:scaleType="centerInside"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding">

            <TextView
                android:id="@+id/price_view"
                style="@style/subheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <EditText
                android:id="@+id/enter_price_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/price_hint"
                android:inputType="numberDecimal"
                android:maxLines="1"/>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/download_picture_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/sale_button_dimen"
                android:text="@string/browse" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding">

            <TextView
                android:id="@+id/quantity_view"
                style="@style/subheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_available" />

            <EditText
                android:id="@+id/edit_quantity_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/quantity_hint"
                android:inputType="number"
                android:maxLines="1"/>

            <Button
                android:id="@+id/decrease_button"
                android:layout_width="@dimen/sale_button_dimen"
                android:layout_height="@dimen/sale_button_dimen"
                android:text="-" />

            <EditText
                android:id="@+id/enter_amount_field"
                android:layout_width="0dp"
                android:layout_height="@dimen/sale_button_dimen"
                android:layout_weight="1"
                android:hint="@string/change_quantity_hint"
                android:inputType="number"
                android:maxLines="1"/>

            <Button
                android:id="@+id/increase_button"
                android:layout_width="@dimen/sale_button_dimen"
                android:layout_height="@dimen/sale_button_dimen"
                android:text="+" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding">

            <TextView
                style="@style/subheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_name" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/padding"
                android:layout_marginStart="@dimen/padding"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:paddingTop="@dimen/padding">

            <TextView
                style="@style/subheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_email" />


            <TextView
                android:id="@+id/supplier_contact_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/edit_supplier_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/sale_button_dimen"
                android:text="@string/edit_supplier"
                app:layout_constraintEnd_toStartOf="@+id/add_a_supplier_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/add_a_supplier_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/sale_button_dimen"
                android:text="@string/action_add_supplier"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/order_button"
                app:layout_constraintStart_toEndOf="@id/edit_supplier_button"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="168dp" />

            <Button
                android:id="@+id/order_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/add_a_supplier_button"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Order" />
        </android.support.constraint.ConstraintLayout>


    </LinearLayout>
</ScrollView>